k8s-configs/cluster-tools/base/karpenter/karpenter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karpenter
  namespace: karpenter
spec:
  template:
    spec:
      containers:
        - name: controller
          resources:
            # The resource requirements vary based on the size of the cluster, and during consolidation, they are extensively utilized.
            # As the cluster size increases, it becomes necessary to reassess these limits.
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "500m"
              memory: "512Mi"
      tolerations:
        - key: CriticalAddonsOnly
          operator: Equal
          value: core
          effect: NoSchedule
