k8s-configs/cluster-tools/base/karpenter/prometheus-metrics.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: karpenter
    namespace: karpenter
  spec:     
    template: 
      metadata:
        annotations:
          prometheus.io/path: /metrics
          prometheus.io/port: "8000"
          prometheus.io/scrape: "true"
