k8s-configs/cluster-tools/base/karpenter/karpenter.yaml
# Source: karpenter/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karpenter
  namespace: karpenter
  labels:
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: 0.24.0
spec:
  type: ClusterIP
  ports:
  - name: http-metrics
    port: 8080
    targetPort: http-metrics
    protocol: TCP
  - name: https-webhook
    port: 443
    targetPort: https-webhook
    protocol: TCP
  selector:
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
---
# Source: karpenter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karpenter
  namespace: karpenter
  labels:
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: 0.24.0
spec:
  replicas: 2
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: karpenter
      app.kubernetes.io/instance: karpenter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karpenter
        app.kubernetes.io/instance: karpenter
      annotations:
        checksum/settings: 16ebaefb580277255f0570c3e7d10c20b8c5b18b4f63ef3158cf2f50a77946e8
    spec:
      serviceAccountName: karpenter
      securityContext:
        fsGroup: 1000
      priorityClassName: system-cluster-critical
      dnsPolicy: Default
      containers:
      - name: controller
        image: public.ecr.aws/r2h3l6e4/pingcloud-clustertools/karpenter/controller:v0.24.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http-metrics
          containerPort: 8080
          protocol: TCP
        - name: http
          containerPort: 8081
          protocol: TCP
        - name: https-webhook
          containerPort: 8443
          protocol: TCP
        livenessProbe:
          initialDelaySeconds: 30
          timeoutSeconds: 30
          httpGet:
            path: /healthz
            port: http
        readinessProbe:
          timeoutSeconds: 30
          httpGet:
            path: /readyz
            port: http
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 1
            memory: 1Gi
      nodeSelector:
        kubernetes.io/os: linux
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: karpenter.sh/provisioner-name
                operator: DoesNotExist
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: karpenter
            app.kubernetes.io/instance: karpenter
---
# Source: karpenter/templates/webhooks-core.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: defaulting.webhook.karpenter.sh
  labels:
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: 0.24.0
webhooks:
- name: defaulting.webhook.karpenter.sh
  admissionReviewVersions: [v1]
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    resources:
    - provisioners
    - provisioners/status
    operations:
    - CREATE
    - UPDATE
---
# Source: karpenter/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: defaulting.webhook.karpenter.k8s.aws
  labels:
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: 0.24.0
webhooks:
- name: defaulting.webhook.karpenter.k8s.aws
  admissionReviewVersions: [v1]
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - karpenter.k8s.aws
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - awsnodetemplates
    - awsnodetemplates/status
    scope: '*'
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    resources:
    - provisioners
    - provisioners/status
    operations:
    - CREATE
    - UPDATE
---
# Source: karpenter/templates/webhooks-core.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.karpenter.sh
  labels:
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: 0.24.0
webhooks:
- name: validation.webhook.karpenter.sh
  admissionReviewVersions: [v1]
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    resources:
    - provisioners
    - provisioners/status
    operations:
    - CREATE
    - UPDATE
    - DELETE
---
# Source: karpenter/templates/webhooks-core.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.config.karpenter.sh
  labels:
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: 0.24.0
webhooks:
- name: validation.webhook.config.karpenter.sh
  admissionReviewVersions: [v1]
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  sideEffects: None
  objectSelector:
    matchLabels:
      app.kubernetes.io/part-of: karpenter
---
# Source: karpenter/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.karpenter.k8s.aws
  labels:
    app.kubernetes.io/name: karpenter
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/version: 0.24.0
webhooks:
- name: validation.webhook.karpenter.k8s.aws
  admissionReviewVersions: [v1]
  clientConfig:
    service:
      name: karpenter
      namespace: karpenter
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - karpenter.k8s.aws
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - awsnodetemplates
    - awsnodetemplates/status
    scope: '*'
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    resources:
    - provisioners
    - provisioners/status
    operations:
    - CREATE
    - UPDATE
    - DELETE
